adds express.static, and tests css with red title

--- a/view/index.html
+++ b/view/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Social</title>
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    <h1>Welcome to Our Social Media Site!</h1>
+    <h1 class="title">Welcome to Our Social Media Site!</h1>
   </body>
 </html>
