--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,33 @@
   text-align: center;
   color: #333333;
 }
-
+.button {
+  background: rgb(130, 224, 255);
+  min-width: 100px;
+  border: none;
+  padding: 10px;
+  font-size: 14px;
+}
+.button:hover, .button:focus {
+  outline: 0;
+  background: #8080ff;
+  color: white;
+}
+.input {
+  border-style: solid;
+  border-width: 1px;
+  border-color: grey;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+.input:focus {
+  outline: 0;
+}
+input:hover {
+  border-color: red;
+}
 .navbar {
   display: flex;
   flex-direction: row;
@@ -10,8 +36,79 @@
   border-bottom: solid;
   align-items: center;
 }
-
+.navlist {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+}
 .navlink {
-  margin: 10px;
+  margin: 15px;
   text-decoration: none;
+  font-size: 2em;
+}
+.navlink:hover {
+  color: green;
+}
+.route-name {
+  display: none;
+}
+.modal-bg {
+  width: 100%;
+  height: 120%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-content {
+  background-color: white;
+  width: 80%;
+  height: 50%;
+  border-radius: 4px;
+  text-align: center;
+  padding: 40px;
+  position: relative;
+}
+.close-modal {
+  position: absolute;
+  top: 0;
+  right: 15px;
+  font-size: 42px;
+  transform: rotate(45deg);
+  cursor: pointer;
+}
+.icon {
+  max-width: 50px;
+}
+.icon:hover {
+  background-color: #e6e6e6;
+}
+@media only screen and (min-width: 640px) {
+  .modal-content {
+    min-width: 300px;
+    max-width: 800px;
+    width: 30%;
+    height: 50%;
+  }
+  .route-name {
+    display: inline;
+  }
+  .navlist {
+    margin-left: 10px;
+  }
+  .navlink {
+    font-size: 1.25em;
+  }
+}
+
+
+
+/* add other layout above */
+@supports (display: grid) {
+/* add grid css here */
 }
